Fix for too long text on mobile

--- a/src/less/website/homepage.less
+++ b/src/less/website/homepage.less
@@ -1,3 +1,6 @@
+.mobileShow{
+  display: none;
+}
 .cardsContainer{
   position: absolute;
   width: 95%;
